Fix table hover and text wrap issue

--- a/Graphs/Table/style.css
+++ b/Graphs/Table/style.css
@@ -29,7 +29,7 @@ table th > div:nth-child(2) {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 45px, rgba(0, 0, 0, 0.22) 0px 10px 18px !important;
 }
 .wrapper-data{
-    width: 80px;
+    white-space: nowrap;
     position: relative;
 }
 .wrapper-data > div:hover{
